--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Acá va el título de la página</h1>
     <p>Párrafo agregado desde GitHub</p>
+    <p>Párrafo agregado desde VSC</p>
 </body>
 </html>
